; ModuleID = '/home/carl/AnghaBench/linux/drivers/parport/extr_ieee1284.c_parport_set_timeout.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/parport/extr_ieee1284.c_parport_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pardevice = type { i64, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.pardevice* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @parport_set_timeout(%struct.pardevice* %0, i64 %1) #0 {
  %3 = alloca %struct.pardevice*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.pardevice* %0, %struct.pardevice** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.pardevice*, %struct.pardevice** %3, align 8
  %7 = getelementptr inbounds %struct.pardevice, %struct.pardevice* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.pardevice*, %struct.pardevice** %3, align 8
  %11 = getelementptr inbounds %struct.pardevice, %struct.pardevice* %10, i32 0, i32 0
  store i64 %9, i64* %11, align 8
  %12 = load %struct.pardevice*, %struct.pardevice** %3, align 8
  %13 = getelementptr inbounds %struct.pardevice, %struct.pardevice* %12, i32 0, i32 1
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load %struct.pardevice*, %struct.pardevice** %17, align 8
  %19 = load %struct.pardevice*, %struct.pardevice** %3, align 8
  %20 = icmp eq %struct.pardevice* %18, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %2
  %22 = load %struct.pardevice*, %struct.pardevice** %3, align 8
  %23 = getelementptr inbounds %struct.pardevice, %struct.pardevice* %22, i32 0, i32 1
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = call i32 @parport_ieee1284_wakeup(%struct.TYPE_4__* %24)
  br label %26

26:                                               ; preds = %21, %2
  %27 = load i64, i64* %5, align 8
  ret i64 %27
}

declare dso_local i32 @parport_ieee1284_wakeup(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
